index.html - added booking and contact sections text

--- a/public/index.html
+++ b/public/index.html
@@ -174,7 +174,9 @@
     <section id="booking" class="index">
         <div class="flex flex-vertical">
             <h2>Make a booking</h2>
-            <p>make a booking</p>
+            <p>
+              Reserve your spot and let us take care of the rest. Whether it’s a dinner for two, a family gathering, or a special celebration, we’re here to make your dining experience unforgettable.
+            </p>
              <a href="./booking.html">Click here</a>
         </div>
     </section>
@@ -183,7 +185,9 @@
     <section id="">
         <div class="flex flex-vertical">
             <h2>Contact us</h2>
-            <p>reach out to us</p>
+            <p>
+              We’d love to hear from you! Whether you're planning a special event, have a question about our menu, or just want to say hello, feel free to get in touch.
+            </p>
              <a href="./contact.html">Click here</a>
         </div>
     </section>
