--- a/public/index.html
+++ b/public/index.html
@@ -182,7 +182,7 @@
     </section>
 
     <!-- contact us -->
-    <section id="">
+    <section id="contact" class="index">
         <div class="flex flex-vertical">
             <h2>Contact us</h2>
             <p>
