--- a/public/booking.html
+++ b/public/booking.html
@@ -72,8 +72,7 @@
           <p>Comments</p>
           <div>
             <!-- <label for="comments">Comments</label> -->
-            <textarea name="comments" rows="10" cols="30" maxlength="250">
-            </textarea>
+            <textarea name="comments" rows="10" cols="30" maxlength="250"></textarea>
           </div>
 
           <input type="submit" value="Submit" />
