added functionality to higlight current web page

--- a/public/booking.html
+++ b/public/booking.html
@@ -186,6 +186,16 @@
       </p>
     </section>
 
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script>
+    $(function(){
+        $('a').each(function(){
+            if ($(this).prop('href') == window.location.href) {
+                $(this).addClass('active'); $(this).parents('li').addClass('active');
+            }
+        });
+    });
+</script>
     <script src="./booking.js"></script>
   </body>
 </html>
