--- a/public/index.html
+++ b/public/index.html
@@ -193,6 +193,16 @@
     </section>
     
 
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script>
+    $(function(){
+        $('a').each(function(){
+            if ($(this).prop('href') == window.location.href) {
+                $(this).addClass('active'); $(this).parents('li').addClass('active');
+            }
+        });
+    });
+</script>
     <script src="./app.js"></script>
 </body>
 </html>
