--- a/public/menu.html
+++ b/public/menu.html
@@ -204,6 +204,16 @@
       </div>
     </section>
 
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script>
+    $(function(){
+        $('a').each(function(){
+            if ($(this).prop('href') == window.location.href) {
+                $(this).addClass('active'); $(this).parents('li').addClass('active');
+            }
+        });
+    });
+</script>
     <script src="./menu.js"></script>
   </body>
 </html>
