--- a/public/booking.html
+++ b/public/booking.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mc Eats</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
@@ -185,6 +186,38 @@
         >
       </p>
     </section>
+
+     <!-- footer section -->
+    <section id="footer">
+      <footer>
+  <div class="footer-content">
+    <h1 class="logo">Mc Eats</h1>
+
+    <nav class="footer-nav list">
+      <ul class="list">
+        <li><a href="./index.html">home</a></li>
+        <li><a href="./about.html">about us</a></li>
+        <li><a href="./menu.html">menu</a></li>
+        <li><a href="./booking.html">booking</a></li>
+        <li><a href="./contact.html">contact us</a></li>
+      </ul>
+    </nav>
+
+    <div class="social-media">
+      <a href="https://www.facebook.com/yourrestaurant" target="_blank" aria-label="Facebook">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://www.instagram.com/yourrestaurant" target="_blank" aria-label="Instagram">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://twitter.com/yourrestaurant" target="_blank" aria-label="Twitter">
+        <i class="fab fa-twitter"></i>
+      </a>
+    </div>
+
+    <p>&copy; 2025 Your Restaurant Name. All rights reserved.</p>
+  </div>
+</footer>
 
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script>
