--- a/public/index.html
+++ b/public/index.html
@@ -228,7 +228,7 @@
 
     </section>
 
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <!-- <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script>
     $(function(){
         $('a').each(function(){
@@ -237,7 +237,7 @@
             }
         });
     });
-</script>
+</script> -->
     <script src="./app.js"></script>
 </body>
 </html>
