index.html - menu button styling added

--- a/index.html
+++ b/index.html
@@ -169,7 +169,10 @@
           </div>
         </div>
       </div>
-      <a class="flex flex-vertical" href="./menu.html">See more</a>
+      <div class="flex flex-vertical">
+        <a href="./menu.html">See more</a>
+      </div>
+     
     </section>
 
     <!-- booking -->
