footer restaurant name added to copyright section

--- a/menu.html
+++ b/menu.html
@@ -233,7 +233,7 @@
       </a>
     </div>
 
-    <p>&copy; 2025 Your Restaurant Name. All rights reserved.</p>
+    <p>&copy; 2025 Mc Eats. All rights reserved.</p>
   </div>
 </footer>
 
