made navbar sticky, fixed link redirects

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <section class="header">
     <!-- navbar -->
-    <div class="flex flex-horizontal">
+    <div class="nav flex flex-horizontal">
         <div class="logo">
             <!-- logo -->
             <h1 class="logo">Mc Eats</h1>
@@ -21,11 +21,11 @@
         <div class="nav-li">
             <!-- links -->
             <ul class="flex list">
-               <li><a href="./index.html">home</a></li>
-                <li><a href="./about.html">about us</a></li>
-                <li><a href="./menu.html">menu</a></li>
-                <li><a href="./booking.html">booking</a></li>
-                <li><a href="./contact.html">contact us</a></li>
+               <li><a href="./index.html#about-top">home</a></li>
+                <li><a href="./about.html#about-top">about us</a></li>
+                <li><a href="./menu.html#menu-top">menu</a></li>
+                <li><a href="./booking.html#booking-top">booking</a></li>
+                <li><a href="./contact.html#contact-top">contact us</a></li>
             </ul>
         </div>
     </div>
@@ -33,6 +33,7 @@
    
 
     <!-- about us section  -->
+     <span class="anchor" id="about-top"></span>
     <section id="about">
     
       <h2>Welcome to Mc Eats — Where Every Bite is Better!</h3>
@@ -182,7 +183,7 @@
             <p>
               Reserve your spot and let us take care of the rest. Whether it’s a dinner for two, a family gathering, or a special celebration, we’re here to make your dining experience unforgettable.
             </p>
-             <a href="./booking.html">Click here</a>
+             <a href="./booking.html#booking-top">Click here</a>
         </div>
     </section>
 
@@ -193,7 +194,7 @@
             <p>
               We’d love to hear from you! Whether you're planning a special event, have a question about our menu, or just want to say hello, feel free to get in touch.
             </p>
-             <a href="./contact.html">Click here</a>
+             <a href="./contact.html#contact-top">Click here</a>
         </div>
     </section>
 
