--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
 
   <section class="header">
     <!-- navbar -->
-    <div class="flex flex-horizontal">
+    <div class="nav flex flex-horizontal">
         <div class="logo">
             <!-- logo -->
             <h1 class="logo">Mc Eats</h1>
@@ -20,17 +20,18 @@
         <div class="nav-li">
             <!-- links -->
             <ul class="flex list">
-               <li><a href="./index.html">home</a></li>
-                <li><a href="./about.html">about us</a></li>
-                <li><a href="./menu.html">menu</a></li>
-                <li><a href="./booking.html">booking</a></li>
-                <li><a href="./contact.html">contact us</a></li>
+               <li><a href="./index.html#about-top">home</a></li>
+                <li><a href="./about.html#about-top">about us</a></li>
+                <li><a href="./menu.html#menu-top">menu</a></li>
+                <li><a href="./booking.html#booking-top">booking</a></li>
+                <li><a href="./contact.html#contact-top">contact us</a></li>
             </ul>
         </div>
     </div>
   </section>
 
     <!-- products -->
+     <span class="anchor" id="menu-top"></span>
     <section id="menu">
       <h2>Our Menu</h2>
 
