fixed footer links

--- a/booking.html
+++ b/booking.html
@@ -197,11 +197,11 @@
 
     <nav class="footer-nav list">
       <ul class="list">
-        <li><a href="./index.html">home</a></li>
-        <li><a href="./about.html">about us</a></li>
-        <li><a href="./menu.html">menu</a></li>
-        <li><a href="./booking.html">booking</a></li>
-        <li><a href="./contact.html">contact us</a></li>
+        <li><a href="./index.html#about-top">home</a></li>
+                <li><a href="./about.html#about-top">about us</a></li>
+                <li><a href="./menu.html#menu-top">menu</a></li>
+                <li><a href="./booking.html#booking-top">booking</a></li>
+                <li><a href="./contact.html#contact-top">contact us</a></li>
       </ul>
     </nav>
 
