menu.html - menu item tag correction; styles.css - changed max-width of slide img

--- a/menu.html
+++ b/menu.html
@@ -66,7 +66,7 @@
             <h3>Chicken Burger</h3>
           </div>
           <div>
-            <hh34>Price:</h4>
+            <h4>Price:</h4>
             <p><span>R: </span>54.99</p>
           </div>
           <div class="hidden">
