--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
     </section>
 
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script>
     $(function(){
         $('a').each(function(){
