booking form styling

--- a/booking.html
+++ b/booking.html
@@ -38,18 +38,18 @@
       <div class="flex flex-vertical">
         <form id="info" action="submit" class="flex flex-vertical">
           <div>
-            <div>
+            <div class="form-items">
               <label for="date">Date</label>
               <input type="date" name="date" required />
             </div>
 
-            <div>
+            <div class="form-items">
               <label for="time">Time</label>
               <input type="time" name="time" required />
             </div>
           </div>
 
-          <div>
+          <div class="form-items">
             <label for="people">People</label>
             <select id="people" name="people" required>
               <option value="1">1 person</option>
@@ -61,12 +61,12 @@
           </div>
 
           <div>
-            <div>
+            <div class="form-items">
               <label for="email">Email</label>
               <input type="email" name="email" required />
             </div>
 
-            <div>
+            <div class="form-items">
               <label for="phone">Phone number</label>
               <input type="tel" name="phone" required />
             </div>
