--- a/contact.html
+++ b/contact.html
@@ -42,12 +42,12 @@
         <form class="flex flex-vertical" method="post">
           <h3>Name</h3>
           <div class="flex">
-            <div>
+            <div class="form-items">
               <label for="fname">First name: </label>
               <input type="text" id="fname" name="fname" required/>
             </div>
 
-            <div>
+            <div class="form-items">
               <label for="lname">Last name: </label>
               <input type="text" id="lname" name="lname" required/>
             </div>
