--- a/menu.html
+++ b/menu.html
@@ -188,6 +188,7 @@
 
     <!-- modal -->
     <section id="menu-modal" class="hidden modal-bkg">
+      <button class="fas fa-times-circle" id="close-item"></button>
       <!-- container -->
       <div class="modal-container">
         <!-- image -->
